transparent blog and cta action changes for footer based on viewport

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -28,6 +28,10 @@
 			"resume": "Resume",
 			"japaneseResume": "Japanese Resume",
 			"certifications": "Certifications"
+		},
+		"footer": {
+			"thanks": "Thanks for visiting!",
+			"contact": "Let's connect!"
 		}
 	}
 }
