--- a/src/translations/jp.json
+++ b/src/translations/jp.json
@@ -33,6 +33,11 @@
 		"footer": {
 			"thanks": "ウェブサイトをご覧いただきありがとうございます。",
 			"contact": "ぜひ繋がりましょう！"
+		},
+		"intro": {
+			"enableAudio": "音声を有効にする",
+			"accept": "受け入れる",
+			"header": "ようこそ"
 		}
 	}
 }
