update about and intro page

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -15,7 +15,7 @@
 			"blog": "Blog"
 		},
 		"about": {
-			"title": "About",
+			"title": "About Me",
 			"description1": "I'm a software engineer with professional experience in front-end web development .",
 			"description2": "My primary skill set includes React.js, Node.js, TypeScript, and GraphQL. However, I do have experience with other technologies such as Vue and Gatsby JS.",
 			"description3a": "I'm currently working as a front-end software engineer at ",
