add comma to about

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -21,7 +21,7 @@
 			"description3a": "I'm currently working as a front-end software engineer at ",
 			"description3b": ".",
 			"currentCompany": "Rapptr Labs",
-			"description4": "When I am not coding I enjoy studying Japanese and have passed both the JLPT N2 and Kanji Kentei Level 10 exams.",
+			"description4": "When I am not coding, I enjoy studying Japanese and have passed both the JLPT N2 and Kanji Kentei Level 10 exams.",
 			"description5": "You can reach me at Zach.Stone.Developer@gmail.com"
 		},
 		"skills": {
