--- a/src/translations/jp.json
+++ b/src/translations/jp.json
@@ -16,7 +16,7 @@
 		},
 		"about": {
 			"title": "自己紹介",
-			"description1": "フロントエンド開発のプロフェッショナルとしての経験を持つソフトウェアエンジニアです。",
+			"description1": "ウェブ開発に集中しているのソフトウェアエンジニアです。",
 			"description2": "私の主なスキルセットには、React.js、Node.js、TypeScript、およびGraphQLが含まれています。ただし、VueやGatsby JSなど、他の技術にも経験があります。",
 			"description3a": "現在、",
 			"description3b": "でフロントエンドソフトウェアエンジニアとして働いています。",
