--- a/src/translations/jp.json
+++ b/src/translations/jp.json
@@ -36,7 +36,7 @@
 			"contact": "ぜひ繋がりましょう！"
 		},
 		"intro": {
-			"enableAudio": "音声を有効にする",
+			"enableAudio": "オーディオを有効にするにはチェックボックスをクリックしてください",
 			"accept": "進む",
 			"header": "私のサイトへようこそ"
 		},
