localize skill buttons

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -28,7 +28,12 @@
 			"title": "Skills",
 			"resume": "Resume",
 			"japaneseResume": "Japanese Resume",
-			"certifications": "Certifications"
+			"certifications": "Certifications",
+			"frontendFrameworks": "Frontend Frameworks",
+			"frontendTools": "Frontend Tools",
+			"backend" : "Backend",
+			"sever": "Server",
+			"other": "Other"
 		},
 		"footer": {
 			"thanks": "Thanks for visiting!",
