fix server button typo, landing refactoring, and fade in for intro

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -32,7 +32,7 @@
 			"frontendFrameworks": "Frontend Frameworks",
 			"frontendTools": "Frontend Tools",
 			"backend" : "Backend",
-			"sever": "Server",
+			"server": "Server",
 			"other": "Other"
 		},
 		"footer": {
