--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,9 +1,9 @@
 {
 	"translation": {
 		"landing": {
-			"morning": "Good morning",
-			"afternoon": "Good afternoon",
-			"evening": "Good evening",
+			"morning": "Good morning.",
+			"afternoon": "Good afternoon.",
+			"evening": "Good evening.",
 			"name": "Zach Stone,",
 			"description1": "and I build",
 			"description2": " web applications."
