--- a/src/translations/jp.json
+++ b/src/translations/jp.json
@@ -34,7 +34,8 @@
 			"frontendTools": "フロントエンドツール",
 			"backend" : "バックエンド",
 			"server": "サーバー",
-			"other": "その他"
+			"other": "その他",
+			"githubStats": "GitHubの統計"
 		},
 		"footer": {
 			"thanks": "ウェブサイトをご覧いただきありがとうございます。",
