--- a/src/translations/jp.json
+++ b/src/translations/jp.json
@@ -17,7 +17,7 @@
 		"about": {
 			"title": "自己紹介",
 			"description1": "ウェブ開発に集中しているソフトウェアエンジニアです。",
-			"description2": "私の主なスキルセットには、React.js、Node.js、TypeScript、およびGraphQLが含まれています。ただし、VueやGatsby JSなど、他の技術にも経験があります。",
+			"description2": "主なスキルは、React JS、Node JS、TypeScript、REST、GraphQLです。",
 			"description3a": "現在、",
 			"description3b": "でフロントエンドソフトウェアエンジニアとして働いています。",
 			"currentCompany": "Rapptr Labs",
