--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -18,7 +18,7 @@
 		"about": {
 			"title": "About Me",
 			"description1": " I'm an American software engineer focusing on web developement.",
-			"description2": "I have gained experience working with various frameworks, languages, and concepts through both personal and professional projects. I constantly strive to improve and refine my skills.",
+			"description2": "I have experience working with various frameworks, languages, and concepts through both personal and professional projects. I am constantly striving to improve and refine my skills.",
 			"description3a": "I'm currently working as a front-end software engineer at ",
 			"description3b": ".",
 			"currentCompany": "Rapptr Labs",
