--- a/src/translations/jp.json
+++ b/src/translations/jp.json
@@ -18,7 +18,7 @@
 		"about": {
 			"title": "自己紹介",
 			"description1": "ウェブ開発に集中しているのアメリカ人のソフトウェアエンジニアです。",
-			"description2": "私は個人的なプロジェクトや職業上の経験を通じて、様々なフレームワーク、言語、概念と共に仕事をする経験を積んできました。常にスキルを向上させ、磨き上げることを心掛けています。",
+			"description2": "私が個人的なプロジェクトと職業上のプロジェクトの両方で取り組んできた経験を通じて、私はさまざまなJavaScriptフレームワークと技術に慣れてきました。",
 			"description3a": "現在、",
 			"description3b": "でフロントエンドソフトウェアエンジニアとして働いています。",
 			"currentCompany": "Rapptr Labs",
