--- a/src/translations/jp.json
+++ b/src/translations/jp.json
@@ -4,7 +4,7 @@
 			"morning": "おはようございます。",
 			"afternoon": "こんにちは。",
 			"evening": "こんばんは。",
-			"name": "ザック•ストーン",
+			"name": "岸を見失う勇気がなければ、決して海を渡る事はできない。",
 			"description1": "と申します。",
 			"description2": "ソフトエンジニアです。",
 			"title": "ソフトエンジニア"
@@ -17,8 +17,8 @@
 		},
 		"about": {
 			"title": "自己紹介",
-			"description1": "ウェブ開発に集中しているのアメリカ人のソフトウェアエンジニアです。",
-			"description2": "私が個人的なプロジェクトと職業上のプロジェクトの両方で取り組んできた経験を通じて、私はさまざまなJavaScriptフレームワークと技術に慣れてきました。",
+			"description1": "ザック・ストーンと申します。ウェブ開発に集中しているのアメリカ人のソフトウェアエンジニアです。",
+			"description2": "自分が立てた目標には全力を注ぎます。この特性が私には日本語とプログラミングを自ら学ぶ力を与えてくれました。ソフトウェアエンジニアとして、私はアメリカを含む様々な国の企業で利用されるビジネスアプリケーションに携わってきました。",
 			"description3a": "現在、",
 			"description3b": "でフロントエンドソフトウェアエンジニアとして働いています。",
 			"currentCompany": "Rapptr Labs",
