--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -18,7 +18,7 @@
 		"about": {
 			"title": "About Me",
 			"description1": " My name is Zach Stone and I am a software engineer from the United States with expertise in web development. ",
-			"description2": "I dedicate myself entirely to any goal I set. This trait has enabled me to teach myself Japanese and programming. As a software engineer, I have worked on business applications used by companies in the United States and beyond.",
+			"description2": "As a self-taught software engineer and self-taught Japanese speaker, I am fully committed to every task I undertake. During my time as a software engineer, I have been fortunate to work on business applications that are utilized by companies all over the United States.",
 			"description3a": "I'm currently working as a front-end software engineer at ",
 			"description3b": ".",
 			"currentCompany": "Rapptr Labs",
