--- a/src/translations/jp.json
+++ b/src/translations/jp.json
@@ -18,7 +18,7 @@
 		"about": {
 			"title": "自己紹介",
 			"description1": "ザック・ストーンと申します。ウェブ開発に集中しているのアメリカ人のソフトウェアエンジニアです。",
-			"description2": "自分が立てた目標には全力を注ぎます。この特性が私には日本語とプログラミングを自ら学ぶ力を与えてくれました。ソフトウェアエンジニアとして、私はアメリカを含む様々な国の企業で利用されるビジネスアプリケーションに携わってきました。",
+			"description2": "自己学習のソフトウェアエンジニアであり、自己学習で日本語を学んだ私は、引き受けた全てのタスクに全力で取り組んでいます。私の経験として、ソフトウェアエンジニアとして、アメリカ全土の企業によって利用されるビジネスアプリケーションに携わる幸運に恵まれています。",
 			"description3a": "現在、",
 			"description3b": "でフロントエンドソフトウェアエンジニアとして働いています。",
 			"currentCompany": "Rapptr Labs",
