update landing font, fix small css issues

--- a/src/translations/jp.json
+++ b/src/translations/jp.json
@@ -4,7 +4,8 @@
 			"morning": "おはようございます。",
 			"afternoon": "こんにちは。",
 			"evening": "こんばんは。",
-			"name": "岸を見失う勇気がなければ、決して海を渡る事はできない。",
+			"name": "ザック・ストーン",
+			"phrase": "岸を見失う勇気がなければ、決して海を渡る事はできない。",
 			"description1": "と申します。",
 			"description2": "ソフトエンジニアです。",
 			"title": "ソフトエンジニア"
@@ -18,7 +19,7 @@
 		"about": {
 			"title": "自己紹介",
 			"description1": "ザック・ストーンと申します。ウェブ開発に集中しているのアメリカ人のソフトウェアエンジニアです。",
-			"description2": "自己学習のソフトウェアエンジニアであり、自己学習で日本語を学んだ私は、引き受けた全てのタスクに全力で取り組んでいます。私の経験として、ソフトウェアエンジニアとして、アメリカ全土の企業によって利用されるビジネスアプリケーションに携わる幸運に恵まれています。",
+			"description2": "自己学習のソフトウェアエンジニアであり、自己学習で日本語を学びました。自分の目標にコミットし、それを達成するために一生懸命努力しています。キャリアの間に、アメリカ中の企業によって利用されている複雑なビジネスアプリケーションの開発に関わる機会を得ることができました。",
 			"description3a": "現在、",
 			"description3b": "でフロントエンドソフトウェアエンジニアとして働いています。",
 			"currentCompany": "Rapptr Labs",
