--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -4,7 +4,8 @@
 			"morning": "Good morning.",
 			"afternoon": "Good afternoon.",
 			"evening": "Good evening.",
-			"name": "To Cross an Ocean You Must Be Willing to Lose Sight of the Shore.",
+			"name": "Zach Stone",
+			"phrase": "To Cross an Ocean You Must Be Willing to Lose Sight of the Shore.",
 			"description1": "and I build",
 			"description2": " web applications.",
 			"title": "Software Engineer"
@@ -18,7 +19,7 @@
 		"about": {
 			"title": "About Me",
 			"description1": " My name is Zach Stone and I am a software engineer from the United States with expertise in web development. ",
-			"description2": "As a self-taught software engineer and self-taught Japanese speaker, I am fully committed to every task I undertake. During my time as a software engineer, I have been fortunate to work on business applications that are utilized by companies all over the United States.",
+			"description2": "As a self-taught software engineer and Japanese speaker, I commit to my goals and work hard to achieve them. Over the course of my career, I have had the opportunity to work on complex business applications that have been utilized by companies throughout the United States.",
 			"description3a": "I'm currently working as a front-end software engineer at ",
 			"description3b": ".",
 			"currentCompany": "Rapptr Labs",
