--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -18,7 +18,7 @@
 		},
 		"about": {
 			"title": "About Me",
-			"description1": "I'm a software engineer from the United States with a focus on front-end web developement. ",
+			"description1": " I'm a software engineer with professional experience in front-end development. My primary skill set is with React.js, Node.js, TypeScript, REST, and GraphQL.  ",
 			"description2": "As a self-taught software engineer and Japanese speaker, I commit to my goals and work hard to achieve them. Over the course of my career, I have had the opportunity to work on complex business applications that have been utilized by companies throughout the United States.",
 			"description3a": "I'm currently working as a front-end software engineer at ",
 			"description3b": ".",
