--- a/src/translations/jp.json
+++ b/src/translations/jp.json
@@ -18,7 +18,7 @@
 		},
 		"about": {
 			"title": "自己紹介",
-			"description1": "ウェブ開発に集中しているのアメリカ人のソフトウェアエンジニアです。",
+			"description1": " フロントエンド開発のプロフェッショナル経験を持つソフトウェアエンジニアです。私の主なスキルセットはReact.js、Node.js、TypeScript、REST、およびGraphQLです。",
 			"description2": "自己学習のソフトウェアエンジニアであり、自己学習で日本語を学びました。自分の目標にコミットし、それを達成するために一生懸命努力しています。キャリアの間に、アメリカ中の企業によって利用されている複雑なビジネスアプリケーションの開発に関わる機会を得ることができました。",
 			"description3a": "現在、",
 			"description3b": "でフロントエンドソフトウェアエンジニアとして働いています。",
