--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -18,9 +18,9 @@
 		},
 		"about": {
 			"title": "About Me",
-			"description1": " I'm a software engineer with professional experience in front-end development. My primary skill set is with React.js, Node.js, TypeScript, REST, and GraphQL.  ",
+			"description1": " I'm a software engineer with professional experience in web development. ",
 			"description2": "As a self-taught software engineer and Japanese speaker, I commit to my goals and work hard to achieve them. Over the course of my career, I have had the opportunity to work on complex business applications utilized by companies throughout the United States.",
-			"description3a": "I'm currently working as a front-end software engineer at ",
+			"description3a": "I'm currently working as a software engineer at ",
 			"description3b": ".",
 			"currentCompany": "Rapptr Labs",
 			"description4": "When I am not coding, I enjoy studying Japanese and have passed the JLPT N2 and Kanji Kentei Level 10 exams.",
