--- a/src/translations/jp.json
+++ b/src/translations/jp.json
@@ -5,10 +5,10 @@
 			"afternoon": "こんにちは。",
 			"evening": "こんばんは。",
 			"name": "ザック・ストーン",
-			"phrase": "岸を見失う勇気がなければ、決して海を渡る事はできない。",
+			"phrase": "岸を見失う勇気がなければ、決して海を渡ることはできません。",
 			"description1": "と申します。",
-			"description2": "ソフトエンジニアです。",
-			"title": "ソフトエンジニア"
+			"description2": "ソフトウェアエンジニアです。",
+			"title": "ソフトウェアエンジニア"
 		},
 		"nav": {
 			"home": "ホーム",
@@ -18,10 +18,10 @@
 		},
 		"about": {
 			"title": "自己紹介",
-			"description1": " フロントエンド開発の経験を持つソフトウェアエンジニアです。主なスキルセットはReact.js、Node.js、TypeScript、REST、およびGraphQLです。",
-			"description2": "自己学習のソフトウェアエンジニアであり、日本語も自己学習しました。自分の目標にコミットし、それを達成するために一生懸命努力しています。キャリアの間に、アメリカ中の企業によって利用されている複雑なビジネスアプリケーションの開発に関わる機会を得ることができました。",
+			"description1": "ウェブ開発の経験を持つソフトウェアエンジニアです。",
+			"description2": "自己学習のソフトウェアエンジニアであり、日本語も自己学習しました。自分の目標にコミットし、それを達成するために一生懸命努力しています。キャリアの間に、アメリカ国内の企業が利用している複雑なビジネスアプリケーションの開発に関わる機会を得ました。",
 			"description3a": "現在、",
-			"description3b": "でフロントエンドソフトウェアエンジニアとして働いています。",
+			"description3b": "でソフトウェアエンジニアとして働いています。",
 			"currentCompany": "Rapptr Labs",
 			"description4": "コーディング以外の時間には、日本語の勉強を楽しんでおり、JLPT N2および漢字検定10級の試験に合格しました。",
 			"description5": "お問い合わせは、Zach.Stone.Developer@gmail.comまでお願いいたします。"
@@ -41,7 +41,7 @@
 		},
 		"footer": {
 			"thanks": "ウェブサイトをご覧いただきありがとうございます。",
-			"contact": "ぜひ繋がりましょう！",
+			"contact": "ぜひお気軽にお問い合わせください！",
 			"tech": "ソースコード"
 		},
 		"intro": {
