--- a/src/translations/jp.json
+++ b/src/translations/jp.json
@@ -6,7 +6,7 @@
 			"evening": "こんばんは。",
 			"name": "ザック・ストーン",
 			"phrase": "岸を見失う勇気がなければ、決して海を渡ることはできません。",
-			"description1": "と申します。",
+			"description1": "と言います。",
 			"description2": "ソフトウェアエンジニアです。",
 			"title": "ソフトウェアエンジニア"
 		},
@@ -18,8 +18,8 @@
 		},
 		"about": {
 			"title": "自己紹介",
-			"description1": "ウェブ開発の経験を持つソフトウェアエンジニアです。",
-			"description2": "自己学習のソフトウェアエンジニアであり、日本語も自己学習しました。自分の目標にコミットし、それを達成するために一生懸命努力しています。キャリアの間に、アメリカ国内の企業が利用している複雑なビジネスアプリケーションの開発に関わる機会を得ました。",
+			"description1": "ウェブ開発の経験があるソフトウェアエンジニアです。",
+			"description2": "コーディングと日本語を自分自身で一心に勉強しています。Rapptr Labsのソフトウェアエンジニアとして、新しい機能の実装やバグの修正、フロントエンド展開を担当しています。フロントエンドがメインのスキルセットですが、バックエンドのこともしています。",
 			"description3a": "現在、",
 			"description3b": "でソフトウェアエンジニアとして働いています。",
 			"currentCompany": "Rapptr Labs",
